# sonar

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.MD  clippy.toml  docker-compose.yaml  rustfmt.toml
.config/: dprint.json
.github/: buildkitd.toml
.github/ISSUE_TEMPLATE/: proposals.yml
.github/workflows/: ci.yaml  docker.yaml  docker.yml  lint.yml  pr.yml  stale.yml
crates/api/: Cargo.toml
crates/api/src/: errors.rs  lib.rs  main.rs  state.rs
crates/api/src/handlers/: candlesticks.rs  health.rs  mod.rs  price.rs  swap.rs  tokens.rs
crates/api/src/ws/: connect.rs  event.rs  io.rs
crates/ingestor/: Cargo.toml
crates/ingestor/src/: constants.rs  lib.rs  metrics.rs
crates/ingestor/src/datasource/: block.rs  geyser.rs  helius.rs  mod.rs  rpc.rs  tx.rs  ws.rs
crates/ingestor/src/decoder/: mod.rs  spl_token_decoder.rs
crates/ingestor/src/handler/: mod.rs  token_swap_handler.rs
crates/ingestor/src/processor/: meteora_dlmm_processor.rs  meteora_pools_processor.rs  mod.rs  ocra_whirlpool_processor.rs  pump_amm_processor.rs  raydium_amm_v4_processor.rs  raydium_clmm_processor.rs  raydium_cpmm_processor.rs  raydium_launchpad_processor.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: job.rs  lib.rs  main.rs  notifications.rs
crates/sol-price/: Cargo.toml
crates/sol-price/src/: binance.rs  cache.rs  clmm.rs  constants.rs  cpmm.rs  lib.rs  main.rs  math.rs
crates/storage/db/: Cargo.toml
crates/storage/db/src/: db.rs  errors.rs  kv_store.rs  lib.rs  message_queue.rs  redis_subscriber.rs
crates/storage/db/src/ck/: db.rs  mod.rs  schema.sql
crates/storage/db/src/models/: candlesticks.rs  events.rs  mod.rs  swap.rs  tokens.rs
crates/streams/: Cargo.toml
crates/streams/src/: app.rs  constants.rs  lib.rs  main.rs  shutdown.rs
crates/streams/src/datasource/: account.rs  geyser.rs  mod.rs  ws.rs
crates/streams/src/handlers/: account.rs  health.rs
crates/streams/src/processor/: meteora_damm_v2_processor.rs  meteora_dlmm_processor.rs  meteora_pools_processor.rs  mod.rs  pump_swap_processor.rs  raydium_amm_v4_processor.rs  raydium_clmm_processor.rs  raydium_cpmm_processor.rs  system_processor.rs  token_2022_account_processor.rs  token_account_processor.rs
crates/streams/src/ws/: adapter.rs  connect.rs  event.rs  io.rs  mod.rs  token.rs
crates/token-metadata/: Cargo.toml
crates/token-metadata/src/: constants.rs  lib.rs  metadata.rs
docs/: ARCHITECTURE.md
