[package]
name = "sonar-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sonar-db = { workspace = true }
sonar-token-metadata = { workspace = true }

# error
anyhow = { workspace = true }
thiserror = { workspace = true }

# axum
axum = { workspace = true, features = ["macros"] }
axum-otel = { workspace = true }

# bigdecimal
bigdecimal = { workspace = true }

# chrono
chrono = { workspace = true }

# dotenvy
dotenvy = { workspace = true }

# futures & async-trait
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }

# socketioxide
socketioxide = { workspace = true }
socketioxide-redis = { workspace = true }

# strum
strum = { workspace = true }
strum_macros = { workspace = true }

# tokio
tokio = { workspace = true }

# tower
tower = { workspace = true }
tower-http = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-otel-extra = { workspace = true, features = ["env", "logger"] }

# utoipa
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# validator
validator = { workspace = true, features = ["derive"] }
