[package]
name = "sonar-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# sonar crates
sonar-db = { workspace = true }

# tracing + otel
tracing = { workspace = true }
tracing-otel-extra = { workspace = true }

# error handling
anyhow = { workspace = true }

# time
chrono = { workspace = true }

# async
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }

dotenvy = { workspace = true }
