[package]
name = "sonar-sol-price"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["binance"]
binance = []

[dependencies]
# sonar crates
sonar-db = { workspace = true }

# errors crates
anyhow = { workspace = true }

# async-trait
async-trait = { workspace = true }

# chrono
chrono = { workspace = true }

# dotenv
dotenvy = { workspace = true }

# futures
futures = { workspace = true }
futures-util = { workspace = true }

# url
reqwest = { workspace = true, features = ["json"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Solana dependencies
solana-account = { workspace = true }
solana-pubkey = { workspace = true }

# tokio
tokio = { workspace = true, features = ["rt", "macros", "signal"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }

# tracing + otel
tracing = { workspace = true }
tracing-otel-extra = { workspace = true }

# url
url = { workspace = true }

[dev-dependencies]
tracing-otel-extra = { workspace = true }
