[package]
name = "sonar-streams"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# errors crates
anyhow = { workspace = true }

# async crates
async-trait = { workspace = true }

# axum
axum = { workspace = true }

# carbon crates
carbon-core = { workspace = true }
carbon-log-metrics = { workspace = true }

# carbon decoder
carbon-meteora-damm-v2-decoder = { workspace = true }
carbon-meteora-dlmm-decoder = { workspace = true }
carbon-meteora-pools-decoder = { workspace = true }
carbon-pump-swap-decoder = { workspace = true }
carbon-raydium-amm-v4-decoder = { workspace = true }
carbon-raydium-clmm-decoder = { workspace = true }
carbon-raydium-cpmm-decoder = { workspace = true }

# carbon datasource
carbon-rpc-program-subscribe-datasource = { workspace = true }
carbon-system-program-decoder = { workspace = true }
carbon-token-2022-decoder = { workspace = true }
carbon-token-program-decoder = { workspace = true }
carbon-yellowstone-grpc-datasource = { workspace = true }

# chrono
chrono = { workspace = true }

# dotenv
dotenvy = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# url
reqwest = { workspace = true, features = ["json"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# socketioxide
socketioxide = { workspace = true }
socketioxide-redis = { workspace = true }

# solana
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-account-decoder-client-types = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-instruction = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-transaction-status = { workspace = true }

# spl token
spl-token = { workspace = true }

# strum
strum_macros = { workspace = true }

# tokio
tokio = { workspace = true, features = ["rt", "macros", "signal"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }

# tracing + otel
tracing = { workspace = true }
tracing-otel-extra = { workspace = true }

# url
url = { workspace = true }

# yellowstone
yellowstone-grpc-proto = { workspace = true }
