[package]
name = "sonar-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

# async crates
async-stream = { workspace = true }
async-trait = { workspace = true }

# chrono
chrono = { workspace = true }

# clickhouse
clickhouse = { workspace = true, features = ["native-tls", "inserter"] }
futures = { workspace = true }

# mpl token metadata
mpl-token-metadata = { workspace = true }

# redis
redis = { workspace = true, features = ["tokio-comp"] }
bb8-redis = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }

# spl token metadata interface
spl-token-metadata-interface = { workspace = true }

# strum
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

# tokio
tokio = { workspace = true }
# tracing + otel
tracing = { workspace = true }

# utoipa
utoipa = { workspace = true }
